# femtos

./: Cargo.toml  README.md
.github/workflows/: build.yml  clippy.yaml  rustdoc.yaml  test.yaml
src/: lib.rs
