[package]
name = "femtos"
version = "0.1.1"
edition = "2021"
rust-version = "1.60"
categories = ["no-std", "no-std::no-alloc", "date-and-time", "emulators", "simulation"]
keywords = ["femtoseconds", "time", "emulators", "simulation"]
description = "a femtosecond-based representation of time, duration, and frequency, for the purpose of simulation"
authors = ["transistor fet <trans@jabberwocky.ca>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/transistorfet/femtos"
readme = "README.md"

[dependencies]

